--- a/binaryIV/2SLS.ipynb
+++ b/binaryIV/2SLS.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "ef8008c9",
    "metadata": {},
    "outputs": [
@@ -652,28 +652,28 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:          2SLS_CI_width   R-squared:                       0.862\n",
-      "Model:                            OLS   Adj. R-squared:                  0.861\n",
-      "Method:                 Least Squares   F-statistic:                     1053.\n",
-      "Date:                Sat, 26 Apr 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        18:44:16   Log-Likelihood:                 2755.4\n",
-      "No. Observations:                2037   AIC:                            -5501.\n",
-      "Df Residuals:                    2032   BIC:                            -5473.\n",
+      "Dep. Variable:          2SLS_CI_width   R-squared:                       0.647\n",
+      "Model:                            OLS   Adj. R-squared:                  0.646\n",
+      "Method:                 Least Squares   F-statistic:                     464.2\n",
+      "Date:                Sun, 27 Apr 2025   Prob (F-statistic):          1.89e-282\n",
+      "Time:                        15:50:35   Log-Likelihood:                -299.75\n",
+      "No. Observations:                1984   AIC:                             609.5\n",
+      "Df Residuals:                    1979   BIC:                             637.5\n",
       "Df Model:                           4                                         \n",
       "Covariance Type:                  HC1                                         \n",
       "====================================================================================\n",
       "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------------\n",
-      "const                0.9720      0.021     46.690      0.000       0.931       1.013\n",
-      "corr_X_Y_squared    -0.3383      0.013    -25.986      0.000      -0.364      -0.313\n",
-      "corr_X_Z_squared    -3.4436      0.067    -51.141      0.000      -3.576      -3.312\n",
-      "entropy_Y            0.6936      0.019     37.293      0.000       0.657       0.730\n",
-      "entropy_X           -0.5173      0.028    -18.553      0.000      -0.572      -0.463\n",
+      "const                1.0717      0.083     12.856      0.000       0.908       1.235\n",
+      "corr_X_Y_squared    -0.5713      0.060     -9.481      0.000      -0.690      -0.453\n",
+      "corr_X_Z_squared    -7.7936      0.212    -36.770      0.000      -8.209      -7.378\n",
+      "entropy_Y            0.7211      0.086      8.388      0.000       0.553       0.890\n",
+      "entropy_X            0.0135      0.114      0.118      0.906      -0.209       0.236\n",
       "==============================================================================\n",
-      "Omnibus:                      559.601   Durbin-Watson:                   1.991\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1481.144\n",
-      "Skew:                           1.452   Prob(JB):                         0.00\n",
-      "Kurtosis:                       6.003   Cond. No.                         34.9\n",
+      "Omnibus:                      310.307   Durbin-Watson:                   2.004\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              468.326\n",
+      "Skew:                           1.161   Prob(JB):                    2.01e-102\n",
+      "Kurtosis:                       3.523   Cond. No.                         34.5\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -684,14 +684,14 @@
    "source": [
     "import statsmodels.api as sm\n",
     "\n",
-    "df_ols = cap_outliers_no_invalid.copy()\n",
+    "df_ols = df_results[df_results['2SLS_CI_valid'] == True]\n",
     "\n",
     "# Add a constant for the intercept\n",
-    "no_outliers['corr_X_Y_squared'] = no_outliers['corr_X_Y'] ** 2\n",
-    "no_outliers['corr_X_Z_squared'] = no_outliers['corr_X_Z'] ** 2\n",
-    "X = sm.add_constant(no_outliers[['corr_X_Y_squared', 'corr_X_Z_squared', \n",
+    "df_ols['corr_X_Y_squared'] = df_ols['corr_X_Y'] ** 2\n",
+    "df_ols['corr_X_Z_squared'] = df_ols['corr_X_Z'] ** 2\n",
+    "X = sm.add_constant(df_ols[['corr_X_Y_squared', 'corr_X_Z_squared', \n",
     "                              'entropy_Y', 'entropy_X']])\t\n",
-    "y = no_outliers['2SLS_CI_width']\n",
+    "y = df_ols['2SLS_CI_width']\n",
     "\n",
     "# Fit the OLS model\n",
     "ols_model = sm.OLS(y, X).fit()\n",
@@ -699,16 +699,105 @@
     "ols_robust = ols_model.get_robustcov_results(cov_type='HC1')\n",
     "print(ols_robust.summary())\n",
     "\n",
-    "#NOTE: compared to causaloptim, all coefficent increases are relative to the decrease in bound width\n"
+    "#NOTE: compared to causaloptim, all coefficient increases are relative to the decrease in bound width\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "39b6dec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The critical value of (corr(X,Z))^2 where 2SLS becomes tighter is: 0.0560\n",
+      "The corresponding |corr(X,Z)| value is: 0.2367\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import symbols, Eq, solve\n",
+    "\n",
+    "# Define variables\n",
+    "corr_XZ_squared = symbols('corr_XZ_squared')\n",
+    "\n",
+    "# Assume constants for corr(X,Y)^2, entropy(Y), entropy(X)\n",
+    "corr_XY_squared_value = 0.5  # Example fixed value\n",
+    "entropy_Y_value = 0.5        # Example fixed value\n",
+    "entropy_X_value = 0.5        # Example fixed value\n",
+    "\n",
+    "# Causaloptim model\n",
+    "width_causaloptim = (\n",
+    "    0.8084\n",
+    "    - 0.0391 * corr_XY_squared_value\n",
+    "    - 2.8801 * corr_XZ_squared\n",
+    "    + 0.4830 * entropy_Y_value\n",
+    "    - 0.3046 * entropy_X_value\n",
+    ")\n",
+    "\n",
+    "# 2SLS model\n",
+    "width_2SLS = (\n",
+    "    1.0717\n",
+    "    - 0.5713 * corr_XY_squared_value\n",
+    "    - 7.7936 * corr_XZ_squared\n",
+    "    + 0.7211 * entropy_Y_value\n",
+    "    + 0.0135 * entropy_X_value\n",
+    ")\n",
+    "\n",
+    "# Solve for corr_XZ_squared where widths are equal\n",
+    "equation = Eq(width_2SLS, width_causaloptim)\n",
+    "solution = solve(equation, corr_XZ_squared)\n",
+    "\n",
+    "print(f\"The critical value of (corr(X,Z))^2 where 2SLS becomes tighter is: {solution[0]:.4f}\")\n",
+    "print(f\"The corresponding |corr(X,Z)| value is: {abs(solution[0])**0.5:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "a0e356f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "general corr 0.0015882970838086436\n",
+      "corr | 2sls_tighter 0.08644486001052706\n"
+     ]
+    }
+   ],
+   "source": [
+    "corr_2sls_tighter = df_results[df_results['2SLS_CI_width'] < df_results['causaloptim_bound_width']]['corr_X_Z'].mean()\n",
+    "\n",
+    "print('general corr', df_results['corr_X_Z'].mean())\n",
+    "\n",
+    "print('corr | 2sls_tighter', corr_2sls_tighter)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39b6dec7",
+   "id": "82c6ab50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For corr_X_Z > 0.23:\n",
+      "avg 2SLS with 1.0790139501429519\n",
+      "avg causalopt w. 0.7651541983513231\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('For corr_X_Z > 0.23:')\n",
+    "print('avg 2SLS with', df_results[df_results['corr_X_Z'] > 0.23]['2SLS_CI_width'].mean())\n",
+    "print('avg causalopt w.', df_results[df_results['corr_X_Z'] > 0.23]['causaloptim_bound_width'].mean())"
+   ]
   }
  ],
  "metadata": {
