--- a/binaryIV/binaryIV_entropy.ipynb
+++ b/binaryIV/binaryIV_entropy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "badddae5",
    "metadata": {},
    "outputs": [],
@@ -11,54 +11,57 @@
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.append('../')\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "from entropy_bounds.utils import optimization_cf\n",
     "from binaryIV import simulate_deterministic_data_with_probabilistic_ate, extract_prob_dict, entropy_of_array\n",
-    "\n",
+    "from entropy_bounds.entropy_bounds import compute_ate_bounds\n",
     "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import math\n"
+    "import math\n",
+    "from linearmodels.iv import IV2SLS\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None  # default='warn'\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d1a10567",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = .5 # The marginal probability P(x) that corresponding to P(y|do(x))\n",
-    "y_x = .5 # The conditional probability P(y|x) that corresponding to p(y|do(x))\n",
-    "entr = 100 # The upper bound of confounder entropy\n",
-    "x_bar = 1 - x\n",
-    "y_bar_x = 1 - y_x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "bcfbdb17",
+   "execution_count": 11,
+   "id": "d236a36a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The bounds of P(y|do(x)) is [0.25, 0.75]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "count    2000.000000\n",
+       "mean        0.692177\n",
+       "std         0.001375\n",
+       "min         0.680292\n",
+       "25%         0.691795\n",
+       "50%         0.692755\n",
+       "75%         0.693019\n",
+       "max         0.693147\n",
+       "Name: entropy_U, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Construct the joint distribution. Our experiment shows the bounds only depends on the value of p(y|x) and p(x), we pick arbitrary values for other entries.\n",
-    "pyx = np.array([[y_x*x, y_bar_x*x], [x_bar*0.5 , x_bar*0.5]]).T\n",
-    "lb, ub, _ = optimization_cf(pyx, ub=entr, p =0, q=0)\n",
-    "print(f\"The bounds of P(y|do(x)) is [{round(lb,3)}, {round(ub,3)}]\")"
+    "data = pd.read_pickle('binaryIV_results.pkl')\n",
+    "data['entropy_U'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "a9ec0e2e",
    "metadata": {},
    "outputs": [
@@ -66,91 +69,136 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b_X_Y: -1.095861795318481\n",
-      "b_Z: -1.0675216543109356\n",
-      "b_U_X: -0.7139098495776162\n",
-      "b_U_Y: 1.0949174617189184\n",
-      "entropy_Y: 0.6927551293225422\n",
-      "entropy_X: 0.6253527126087997\n",
-      "entropy_Z: 0.6930751788318458\n",
-      "entropy_U: 0.6924990405193354\n",
-      "corr_X_Y: -0.31557179787439665\n",
-      "corr_X_Z: -0.2537956703596456\n",
-      "corr_Y_Z: 0.01634358426027675\n",
-      "ATE_true: -0.2495122385388485\n",
-      "bound_lower: 0.25100723245233475\n",
-      "bound_upper: -0.11300760398211884\n",
-      "bound_width: -0.3640148364344536\n",
-      "bounds_valid: False\n"
+      "ATE_true: -0.6494981193401556\n",
+      "bound_lower: -0.7589942481344406\n",
+      "bound_upper: 0.202100234716181\n",
+      "bound_width: 0.9610944828506216\n",
+      "bounds_valid: True\n"
      ]
     }
    ],
    "source": [
-    "sim = simulate_deterministic_data_with_probabilistic_ate()\n",
+    "# minimal working example\n",
+    "sim = data.iloc[0]\n",
     "\n",
     "df = pd.DataFrame({'Y': sim['Y'], 'X': sim['X'], 'Z': sim['Z']})\n",
-    "prob_dict = extract_prob_dict(df)\n",
     "\n",
-    "# # pYX_Z = P(Y,X|Z)\n",
-    "# print('Probability Dictionary:')\n",
-    "# for key, value in prob_dict.items():\n",
-    "#     print(f\"{key}: {value}\")\n",
+    "entr = 0.7\n",
     "\n",
-    "##compute p(y|x) from df\n",
-    "y_x = df[df['X'] == 1]['Y'].mean()\n",
+    "# Compute ATE bounds\n",
+    "ate_lower, ate_upper = compute_ate_bounds(df['X'].to_numpy(), df['Y'].to_numpy(), entr)\n",
     "\n",
-    "##compute p(x) from df\n",
-    "x = df['X'].mean()\n",
+    "# Check if true ATE is within bounds\n",
+    "bounds_valid = ate_lower <= sim['ATE_true'] <= ate_upper\n",
     "\n",
-    "##confounder entropy\n",
-    "entr = 100\n",
-    "\n",
-    "\n",
-    "x_bar = 1 - x\n",
-    "y_bar_x = 1 - y_x\n",
-    "\n",
-    "pyx = np.array([[y_x*x, y_bar_x*x], [x_bar*0.5 , x_bar*0.5]]).T\n",
-    "lb_p11, ub_p11, _ = optimization_cf(pyx, ub=entr, p =0, q=1)\n",
-    "\n",
-    "####\n",
-    "##compute p(y|x) from df\n",
-    "y_x = df[df['X'] == 1]['Y'].mean()\n",
-    "\n",
-    "##compute p(x) from df\n",
-    "x = df['X'].mean()\n",
-    "\n",
-    "x_bar = 1 - x\n",
-    "y_bar_x = 1 - y_x\n",
-    "\n",
-    "pyx = np.array([[y_x*x, y_bar_x*x], [x_bar*0.5 , x_bar*0.5]]).T\n",
-    "lb_p10, ub_p10, _ = optimization_cf(pyx, ub=entr, p =0, q=0)\n",
-    "\n",
-    "bound_lower = lb_p11 - lb_p10\n",
-    "bound_upper = ub_p11 - ub_p10\n",
-    "\n",
-    "bounds_valid = bound_lower <= sim['ATE_true'] <= bound_upper\n",
-    "\n",
+    "# Collect results\n",
     "result = {\n",
-    "    'b_X_Y': sim['b_X_Y'],\n",
-    "    'b_Z': sim['b_Z'],\n",
-    "    'b_U_X': sim['b_U_X'],\n",
-    "    'b_U_Y': sim['b_U_Y'],\n",
-    "    'entropy_Y': entropy_of_array(sim['Y']),\n",
-    "    'entropy_X': entropy_of_array(sim['X']),\n",
-    "    'entropy_Z': entropy_of_array(sim['Z']),\n",
-    "    'entropy_U': entropy_of_array(sim['U']),\n",
-    "    'corr_X_Y': np.corrcoef(sim['X'], sim['Y'])[0, 1],\n",
-    "    'corr_X_Z': np.corrcoef(sim['X'], sim['Z'])[0, 1],\n",
-    "    'corr_Y_Z': np.corrcoef(sim['Y'], sim['Z'])[0, 1],\n",
     "    'ATE_true': sim['ATE_true'],\n",
-    "    'bound_lower': bound_lower,\n",
-    "    'bound_upper': bound_upper,\n",
-    "    'bound_width': bound_upper - bound_lower,\n",
+    "    'bound_lower': ate_lower,\n",
+    "    'bound_upper': ate_upper,\n",
+    "    'bound_width': ate_upper - ate_lower,\n",
     "    'bounds_valid': bounds_valid\n",
     "}\n",
     "\n",
+    "# Display\n",
     "for key, value in result.items():\n",
     "    print(f\"{key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "059433bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2000.000000\n",
+       "mean        0.692177\n",
+       "std         0.001375\n",
+       "min         0.680292\n",
+       "25%         0.691795\n",
+       "50%         0.692755\n",
+       "75%         0.693019\n",
+       "max         0.693147\n",
+       "Name: entropy_U, dtype: float64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['entropy_U'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55184f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results = data.copy()\n",
+    "entr = np.random.uniform(0, 1)\n",
+    "for idx, sim in df_results.iterrows():\n",
+    "\n",
+    "    df = pd.DataFrame({'Y': sim['Y'], 'X': sim['X'], 'Z': sim['Z']})\n",
+    "\n",
+    "    # Compute ATE bounds\n",
+    "    ate_lower, ate_upper = compute_ate_bounds(df['X'].to_numpy(), df['Y'].to_numpy(), entr, method='cf')\n",
+    "\n",
+    "    # Check if true ATE is within bounds\n",
+    "    bounds_valid = ate_lower <= sim['ATE_true'] <= ate_upper\n",
+    "\n",
+    "    # Collect results\n",
+    "    result = {\n",
+    "        'ATE_true': sim['ATE_true'],\n",
+    "        'bound_lower': ate_lower,\n",
+    "        'bound_upper': ate_upper,\n",
+    "        'bound_width': ate_upper - ate_lower,\n",
+    "        'bounds_valid': bounds_valid\n",
+    "    }\n",
+    "\n",
+    "    df_results.at[idx, 'entropyBounds_H(conf)_UB'] = entr\n",
+    "    df_results.at[idx, 'entropyBounds_bound_lower'] = ate_lower\n",
+    "    df_results.at[idx, 'entropyBounds_bound_upper'] = ate_upper\n",
+    "    df_results.at[idx, 'entropyBounds_bound_width'] = ate_upper - ate_lower\n",
+    "    df_results.at[idx, 'entropyBounds_bounds_valid'] = bounds_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9752c61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Bounds: 4\n",
+      "Average Bound Width: 0.912342858446651\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Invalid Bounds: {df_results[df_results['entropyBounds_bounds_valid'] == False].shape[0]}\")\n",
+    "print(f\"Average Bound Width: {df_results['entropyBounds_bound_width'].mean()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dc47301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## RCT: entropy --> bound width\n",
+    "random_entropy_valid = df_results[df_results['entropyBounds_bounds_valid'] == True].copy()\n",
+    "\n"
    ]
   }
  ],
