--- a/binaryIV/binaryIV_entropy.ipynb
+++ b/binaryIV/binaryIV_entropy.ipynb
@@ -189,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "93fe1d4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#random_entropy_0_1 = df_results.copy() #entropy randomly sampled from [0,1]\n",
-    "df_results.drop(columns=['ATE_true_smooth', 'entropyBounds_bound_lower_smooth', 'entropyBounds_bound_upper_smooth'], inplace=True, errors='ignore')\n",
-    "df_results.to_pickle('binaryIV_results.pkl')"
+    "# df_results.drop(columns=['ATE_true_smooth', 'entropyBounds_bound_lower_smooth', 'entropyBounds_bound_upper_smooth'], inplace=True, errors='ignore')\n",
+    "# df_results.to_pickle('binaryIV_results.pkl')"
    ]
   },
   {
