--- a/binaryIV/binaryIV_autobound.ipynb
+++ b/binaryIV/binaryIV_autobound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "edfbb4f5",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,10 @@
     "from binaryIV import simulate_deterministic_data_with_probabilistic_ate, extract_prob_dict, entropy_of_array\n",
     "from entropy_bounds.entropy_bounds import compute_ate_bounds\n",
     "\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -35,7 +39,6 @@
     "import statsmodels.formula.api as smf\n",
     "\n",
     "\n",
-    "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "\n",
     "\n",
@@ -115,39 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e485eda3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\autobound\\causalProblem.py:146: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  query = [ f'{row_data.index[j]}={int(row_data[j])}'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Minimal working example\n",
     "sim = data.iloc[0]\n",
     "df = pd.DataFrame({'X': sim['X'], 'Y': sim['Y'], 'Z': sim['Z']})\n",
     "joint_probs = compute_joint_probabilities(df)\n",
-    "joint_probs.to_csv('autobound_example.csv', index=False)\n",
     "\n",
     "dag = DAG()\n",
     "dag.from_structure(\"Z -> X, X -> Y, U -> X, U -> Y\", unob = \"U\")\n",
