--- a/binaryIV/binaryIV_autobound.ipynb
+++ b/binaryIV/binaryIV_autobound.ipynb
@@ -225,26 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdae647",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3563052005.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[22], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_results.to_pickle('binaryIV_results.pkl'\u001b[0m\n\u001b[1;37m                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
-   "source": [
-    "#save data\n",
-    "df_results.to_pickle('binaryIV_results.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
    "id": "522e7057",
    "metadata": {},
    "outputs": [
@@ -267,8 +247,7 @@
     }
    ],
    "source": [
-    "plot_smoothed_ate_vs_bounds(df_results, window=30)\n",
-    "print('Avg bounds width:', df_results['autobound_bound_width'].mean())"
+    "plot_smoothed_ate_vs_bounds(df_results, window=30)"
    ]
   }
  ],
