train a neural network

--- a/binaryIV/binaryIV_autobound.ipynb
+++ b/binaryIV/binaryIV_autobound.ipynb
@@ -249,6 +249,26 @@
    "source": [
     "plot_smoothed_ate_vs_bounds(df_results, window=30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7e1ac3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg bounds width: 0.7914459855922237\n",
+      "# invalid: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Avg bounds width:', df_results['autobound_bound_width'].mean())\n",
+    "print('# invalid:', df_results[df_results['autobound_bounds_valid'] == False].shape[0])"
+   ]
   }
  ],
  "metadata": {
